--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,12 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# environment variables
+.env
+.env.development
+.env.production
+
+.tmp
+# clerk configuration (can include secrets)
+/.clerk/
